laborations/lab2/testsuite/bad/void-return.cc
void ret() {
  return printInt(0);
}

int main() {
  return 0;
}
